Added about section

--- a/index.html
+++ b/index.html
@@ -26,13 +26,27 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Marianne!</div>
-		<div class="tagline">Web developer | Norwegian</div>
+		<div class="tagline">Web developer</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-		<div class="icons-social">
+		<div class="is">
 			<a target="_blank" href="https://github.com/mahval"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/story/mahval"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/mahval/"><i class="fab fa-linkedin"></i></a>
-    </div>
+		</div>
+		<div class="about">
+			<p>
+				Hi, I'm Marianne Hval, I'm a full stack developer with a specialty in front-end development. My qualifications include a
+				Bachelor's degree in Informatics: Programming and Network from our own University of Oslo as well as multiple years in
+				the tech industry and my own personal projects. Right now I work with Fintech Neo developing exciting new financial and
+				business solutions for many industries.
+			</p>
+			<p>
+				With Fintech Neo I've become highly skilled in Angular Framework and Typescript, using these to develop a variety of different
+				pieces of software, including but not limited to: a CRM, online training courses, web portals and audio guides. With
+				this many varied projects I've also developed my skills at all stages of software development including testing, compliance
+				and debugging.
+			</p>
+		</div>
 	</main>
 </body>
 </html>
