--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Marianne!</div>
-		<div class="tagline">Web developer</div>
+		<div class="tagline">Web developer | 
+			<a href="./mariannehval.pdf" download>
+			CV
+		  </a></div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="is">
 			<a target="_blank" href="https://github.com/mahval"><i class="fab fa-github"></i></a>
