Open CV in new tab

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<main>
 		<div class="intro">Hello, I'm Marianne!</div>
 		<div class="tagline">Web developer | 
-			<a href="./mariannehval.pdf" download>
+			<a href="./mariannehval.pdf" target="_blank">
 			CV
 		  </a></div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
